Put a more congruent background

--- a/css/index.css
+++ b/css/index.css
@@ -33,7 +33,7 @@ table
 /* Set a fontsize that will look the same in all browsers. */
 body
 {
-	background: #E9EEF2 url(../images/theme/backdrop.png) repeat-x;
+	background: #94ccfe;
 	font: 78%/130% "Verdana", "Arial", "Helvetica", sans-serif;
 	margin: 0 auto;
 	padding: 15px 0;
